Mon Mar  8 20:47:17 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (DLSYM_NEEDS_UNDERSCORE): Replaced.
	* acinclude.in (AM_SYS_SYMBOL_UNDERSCORE): New.

	* VERSION: Now 0.9.4

Sun Feb 28 19:11:00 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (dld): Test disabled.

Fri Feb 26 17:55:41 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* encode.c (encode_simple): temporary fix.

Wed Feb 24 11:07:27 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: New option --enable-static-rnd.

Mon Feb 22 20:04:00 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* BUGS: Now we assign bug numbers.
	* OBUGS: New to keep rack o fixed bugs (CVS only)

Fri Feb 19 18:01:54 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* VERSION: Released 0.9.3

Fri Feb 19 15:49:15 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4: Removed gettext macros.

Tue Feb 16 14:10:02 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (socket): Check for -lsocket and -lnsl.
	(osf4): Disable all warnings for DEC's cc.
	(-Wall): Add more warning options for gcc

Sat Feb 13 12:04:43 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: Changed detection of compiler flags.
	* intl/ : Removed directory

Wed Feb 10 17:15:39 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_CHECK_RDYNAMIC): Fix for freebsd 2.2

	* configure.in: a lot of changes to allow selection of modules.
	Add support for OS/2.

	* acinclude.m4: add some more caching

	* README: Spelling and grammar corrections (John A. Martin)
	* INSTALL: Ditto.

Wed Jan 20 21:40:21 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: --enable-m-guard is now default

Wed Jan 13 12:49:36 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* INSTALL: Applied new information how to build rpms by Fabio Coatti
	* Makefile.in (gnupg.spec): Changed the names.

Tue Jan 12 11:17:18 CET 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* config.links (m68k-atari-mint): New
