@@ -118,7 +118,7 @@ AC_PROG_CC
 AC_PROG_CPP
 AC_ISC_POSIX
 AC_PROG_INSTALL
-AM_PROG_LIBTOOL
+AC_PROG_RANLIB
 
 MPI_OPT_FLAGS=""
 if test "$GCC" = yes; then
