@@ -7,6 +7,4 @@ missing
 gnupg.spec.in
 autogen.sh
 ChangeLog
-ltconfig
-ltmain.sh
 
